themes/ec_default/css/colors.less
/*----- Set 1 -----*/
//main colors
@body_color:  #ffffff; //#ffffff
@text_color:  #3b3b3b; //#3b3b3b

//header colors
@h1_color: #113355; //#113355
@h2_color: #336699; //#336699
@h3_color: #003366; //#003366
@h4_color: #003366; //#003366
@h5_color: #336699; //#336699
@h6_color: #003366; //#003366

//links colors
@link_color:               #027AC6; //#027AC6
@link_hover_color:   #003366; //#003366
@link_active_color: #003366; //#003366

//sidebar colors
@sidebar_bg_color:     #f2f2f2; //#f2f2f2
@sidebar_text_color: #3b3b3b; //#3b3b3b

//tabs colors
@primary_tab_bg_color:      #0065a2; //#0065a2
@primary_tab_text_color:  #ffffff; //#ffffff
/*----- /Set 1 -----*/

/*----- Set 2 -----*/
/*//main colors
@body_color:  #0065A2; //#ffffff
@text_color:  #dddddd; //#3b3b3b

//header colors
@h1_color: #113355; //#113355
@h2_color: #336699; //#336699
@h3_color: #003366; //#003366
@h4_color: #003366; //#003366
@h5_color: #336699; //#336699
@h6_color: #003366; //#003366

//links colors
@link_color:               #dddddd; //#027AC6
@link_hover_color:   #e88a24; //#003366
@link_active_color: #e88a24; //#003366

//sidebar colors
@sidebar_bg_color:     #e88a24; //#f2f2f2
@sidebar_text_color: #000000; //#3b3b3b
@sidebar_link_color: #000000; //#3b3b3b

//tabs colors
@primary_tab_bg_color:      #e88a24; //#0065a2
@primary_tab_text_color:  #000000; //#ffffff*/
/*----- /Set 2 -----*/

/* ---------- Color Module Styles ----------- */

body,
body.overlay,
li {
  color: @text_color;
}
h1 {color: @h1_color; }
h2 {color: @h2_color; }
h3 {color: @h3_color; }
h4 {color: @h4_color; }
h5 {color: @h5_color; }
h6 {color: @h6_color; }

.comment {
  .comment-arrow {
    border-color: @body_color;
  }
}

.layout {
  background: @body_color;
}

.layout-left  {
  label {
    color: @sidebar_text_color;
  }
  .block {
    background-color: @sidebar_bg_color;
    border-top: solid 1px darken(@sidebar_bg_color,15%);
    border-right: solid 2px darken(@sidebar_bg_color,15%);
    border-bottom: solid 2px darken(@sidebar_bg_color,15%);
  }
  a {
    color: @sidebar_link_color;
    &:hover { color: @sidebar_link_color; };
  }
}

/*.tabs {
  border-color: darken(@body_color,15%);
  ul {
    &.primary {
      li {
        a {
          color: @text_color;
          background-color: darken(@body_color,10%);
          border-color: darken(@body_color,20%);
          text-shadow: 0 1px 0 darken(@body_color,20%);
          &:hover { 
            border-color: darken(@body_color,15%); 
            background-color: darken(@body_color,5%);
            color: @text_color;
          }
          .active {
            background-color: @body_color;
            a {
              background-color: lighten(@body_color,5%);
              border-color: darken(@body_color,20%);
              border-bottom-color: @body_color;            
            }
          }
        }
      }
    }
  }
}*/
.tabs {
  border-color: darken(@body_color,15%);
  li {
    a {
      &:hover {
        background-color: darken(@body_color,5%);
        border-color: @body_color @body_color darken(@body_color,15%);
      }
    }
  }
  .active {
    a {
      color: lighten(@link_color,20%);
      background-color: @body_color;
      border-color: darken(@body_color,15%) darken(@body_color,15%) transparent darken(@body_color,15%);
      &:hover { 
        color: lighten(@link_color,20%);
        background-color: @body_color;
        border-color: darken(@body_color,15%) darken(@body_color,15%) transparent darken(@body_color,15%);
      }
    }
  }
}

a {
  color: @link_color;
  &:hover { color: @link_hover_color; }
  &:focus { color: @link_hover_color; }
  &:active { color: @link_active_color; }  
  &:visited { color: @link_color; }
}

/*#main-menu-links {
  a {
    color: @primary_tab_text_color;
    background: @primary_tab_bg_color;
    text-shadow: 1px 1px (#fff - @primary_tab_text_color);
    &:hover { background: fadeout(@primary_tab_bg_color,10%);}
    &:focus { background: fadeout(@primary_tab_bg_color,10%); }
    &:active { background: darken(@primary_tab_bg_color,10%); }
  }
}*/
.pills {
  a {
    border: 1px solid fadeout(@primary_tab_bg_color,10%);
    &:hover { 
      background: darken(@primary_tab_bg_color,10%); 
      color: @primary_tab_text_color;
      border-color: transparent;
    }
  }
  .active { 
    a {
      color: @primary_tab_text_color;
      background: @primary_tab_bg_color;
      text-shadow: 1px 1px (#fff - @primary_tab_text_color);
      border-color: transparent;
      &:hover { background: fadeout(@primary_tab_bg_color,10%); }
      &:focus { background: fadeout(@primary_tab_bg_color,10%); }
    }
  }
}

.meta {
  color: lighten(@text_color,20%);
}

.layout-footer {
  color: @link_color;
}

